Renamed api flag for public access
