# packages/api/internal/orchestrator/nodemanager/sandboxes.go
@@ -50,7 +50,7 @@ func (n *Node) GetSandboxes(ctx context.Context) ([]sandbox.Sandbox, error) {
 		networkTrafficAccessToken := config.GetNetwork().GetIngress().TrafficAccessToken
 		network := &types.SandboxNetworkConfig{
 			Ingress: &types.SandboxNetworkIngressConfig{
-				AllowPublicAccess: networkTrafficAccessToken == nil,
+				DenyPublicAccess: networkTrafficAccessToken == nil,
 			},
 			Egress: &types.SandboxNetworkEgressConfig{
 				AllowedAddresses: config.GetNetwork().GetEgress().GetAllowedCidrs(),
