# spec/openapi.yml
@@ -220,10 +220,6 @@ components:
     SandboxNetworkConfig:
       type: object
       properties:
-        allowPublicAccess:
-          type: boolean
-          default: true
-          description: Specify if the sandbox URLs should be accessible without authentication.
         allowOut:
           type: array
           description: List of allowed CIDR blocks or IP addresses for egress traffic. Allowed addresses always take precedence over blocked addresses.
@@ -234,6 +230,10 @@ components:
           description: List of denied CIDR blocks or IP addresses for egress traffic
           items:
             type: string
+        denyPublicTraffic:
+          type: boolean
+          default: false
+          description: Specify if the sandbox URLs should be accessible only with authentication.
 
     SandboxLog:
       description: Log entry with timestamp and line
